--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,28 @@
-# Byte-compiled / optimized / DLL files
-*.pyc
-*.pyo
-*.pyd
+# Exclude PyCharm's project files
+.idea/
+
+# Exclude Python bytecode cache
 __pycache__/
 
-# Logs and database files
-*.log
-*.sqlite3
-*.db
+# Exclude the SQLite database file
+db.sqlite3
 
-# Media files
-/media/
+# Exclude Python virtual environment
+.venv/
 
-# Django specific
-*.pot
+# Exclude compiled files
 *.pyc
 *.pyo
 *.pyd
-*.sql
 
-# Virtual environment
-venv/
-env/
 
-# Environments
+# Exclude log files
+*.log
+
+# Exclude environment variables files
 .env
 *.env
 
-# Node modules
-node_modules/
-
-# Compiled files
-*.so
-
-# Static files
+# Optional: Add static and media files if applicable
 /static/
-staticfiles/
-
-# PyCharm project files
-.idea/
-*.iml
-out/
-
-# IDE and editor specific files
-.vscode/
-*.swp
-*.swo
-*.bak
-*.orig
-*.DS_Store
-
-# macOS specific files
-.DS_Store
-
-# Windows thumbnail database files
-Thumbs.db
+media/
