--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,9 @@ services:
       - "4200:4200"
     stdin_open: true
     tty: true
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-
     networks:
       - app-network
+    command: npm run start
 
   backend:
     build:
@@ -20,11 +17,9 @@ services:
       - "8000:8000"
     stdin_open: true
     tty: true
-    volumes:
-      - ./backend:/app
     networks:
       - app-network
-
+    
 networks:
   app-network:
     driver: bridge
