--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,10 +6,10 @@ RUN npm install -g @angular/cli@18.2.12
 
 COPY package*.json ./
 
+RUN rm -rf node_modules
+
 RUN npm install
 
 COPY . .
 
 EXPOSE 4200
-
-CMD ["ng", "serve", "--host", "0.0.0.0", "--port", "4200"]
