--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 --port 4200",
+    "start": "ng serve --host 0.0.0.0 --port 4200 --disable-host-check",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@ag-grid-enterprise/all-modules": "^27.3.0",
     "@amcharts/amcharts5": "^5.10.8",
     "@angular/animations": "^18.2.0",
     "@angular/common": "^18.2.0",
